force-app/main/default/objects/Table_User_View__c/Table_User_View__c.object-meta.xml
<CustomObject>
    <label>Table User View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table User Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>