force-app/main/default/objects/Table_User_View__c/fields/Column_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>Column_State_JSON__c</fullName>
    <label>Column State JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>