force-app/main/default/objects/Table_User_View__c/fields/Filter_Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_Payload_JSON__c</fullName>
    <label>Filter Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>