force-app/main/default/objects/Table_User_View__c/fields/Matrix_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Config_JSON__c</fullName>
    <label>Matrix Config JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>