force-app/main/default/objects/Table_User_View__c/fields/Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sort_Direction__c</fullName>
    <label>Sort Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>