force-app/main/default/objects/Table_User_View__c/fields/Sort_Key__c.field-meta.xml
<CustomField>
    <fullName>Sort_Key__c</fullName>
    <label>Sort Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>